Bug 529735 - double clicking on a .eml message doesn't show remote images r=rkent

Original patch by bienvenu